--- a/linux/donate.html
+++ b/linux/donate.html
@@ -138,7 +138,7 @@
                 </div>
             </div>
             <div class="footer l-box is-center">
-                <a class="my_link_ribbon" href="mailto:mail@remarkableapp.net">Jamie McGowan</a> 2015 | <a class="my_link_ribbon" href="../license.txt" target="_blank">License</a>
+                <a class="my_link_ribbon" href="mailto:remarkableapp@outlook.com">Jamie McGowan</a> 2015 | <a class="my_link_ribbon" href="../license.txt" target="_blank">License</a>
             </div>
         </body>
     </html>
