--- a/windows.html
+++ b/windows.html
@@ -103,7 +103,7 @@
             </div>
         </div>
         <div class="footer l-box is-center">
-            <a class="my_link_ribbon" href="mailto:mail@remarkableapp.net" target="_blank">Jamie McGowan</a> 2015
+            <a class="my_link_ribbon" href="mailto:remarkableapp@outlook.com" target="_blank">Jamie McGowan</a> 2015
         </div>
     </body>
 </html>
