Add windows screenshot. Fixed https error

--- a/windows.html
+++ b/windows.html
@@ -9,10 +9,10 @@
         <link rel="author" href="<link rel=”author” href=”https://plus.google.com/+JamieMcGowan-dev/" />
         <link rel="icon" type="image/png" href="images/remarkable.png">
         <link rel="stylesheet" href="http://yui.yahooapis.com/pure/0.5.0/pure-min.css">
-        <link href="http://maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet">
+        <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet">
         <link rel="stylesheet" href="http://yui.yahooapis.com/pure/0.5.0/grids-responsive-min.css">
         <link rel="stylesheet" href="./stylesheets/extra.min.css">
-        <script>
+        <script>m
         (function(i, s, o, g, r, a, m) {
         i['GoogleAnalyticsObject'] = r;
         i[r] = i[r] || function() {
@@ -28,7 +28,7 @@
         ga('require', 'displayfeatures');
         ga('send', 'pageview');
         </script>
-        <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
     </head>
     <body>
         <div class="header">
@@ -54,6 +54,9 @@
             <h3 class="is-center">Remarkable for Windows</h3>
             <p class="is-center"><strong>The Windows version is currently under development and will be ready soon!</strong></p>
             <p class="is-center">Why not check out the <a class="my_link_ribbon" href="linux.html">Linux version</a> so you can know what to expect?</p>
+            <div class="pure-u-1">
+                <img class="pure-img" src="images/remarkable_windows.png">
+            </div>
             <h3>Planned Features:</h3>
             <ul>
                 <li>Custom CSS settings</li>
