--- a/linux/donate.html
+++ b/linux/donate.html
@@ -9,7 +9,7 @@
         <link rel="author" href="<link rel=”author” href=”https://plus.google.com/+JamieMcGowan-dev/" />
         <link rel="icon" type="image/png" href="images/remarkable.png">
         <link rel="stylesheet" href="http://yui.yahooapis.com/pure/0.5.0/pure-min.css">
-        <link href="http://maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet">
+        <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet">
         <link rel="stylesheet" href="http://yui.yahooapis.com/pure/0.5.0/grids-responsive-min.css">
         <link rel="stylesheet" href="../stylesheets/extra.min.css">
         <link rel="stylesheet" href="../stylesheets/main.min.css">
@@ -29,7 +29,7 @@
         ga('require', 'displayfeatures');
         ga('send', 'pageview');
         </script>
-        <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
         <script type="text/javascript">
         var switchTo5x = true;
         </script>
