Fixed https security error? (Hopefully)

--- a/linux/download.html
+++ b/linux/download.html
@@ -1,149 +1,137 @@
 <!doctype html>
 <html>
-
-<head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Remarkable - Download for Linux</title>
-    <meta name="description" content='Remarkable is the best fully featured markdown editor for Linux and Windows'>
-    <meta name="keywords" content="Markdown, Editor, Linux, Windows, Live Preview, PDF, Free, Export, Scrolling, MathJax, Syntax, Highlighting">
-    <link rel="author" href="<link rel=”author” href=”https://plus.google.com/+JamieMcGowan-dev/" />
-    <link rel="icon" type="image/png" href="../images/remarkable.png">
-    <link rel="stylesheet" href="http://yui.yahooapis.com/pure/0.5.0/pure-min.css">
-    <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="http://yui.yahooapis.com/pure/0.5.0/grids-responsive-min.css">
-    <link rel="stylesheet" href="../stylesheets/extra.min.css">
-    <script>
+    <head>
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Remarkable - Download for Linux</title>
+        <meta name="description" content='Remarkable is the best fully featured markdown editor for Linux and Windows'>
+        <meta name="keywords" content="Markdown, Editor, Linux, Windows, Live Preview, PDF, Free, Export, Scrolling, MathJax, Syntax, Highlighting">
+        <link rel="author" href="<link rel=”author” href=”https://plus.google.com/+JamieMcGowan-dev/" />
+        <link rel="icon" type="image/png" href="../images/remarkable.png">
+        <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet">
+        <link rel="stylesheet" href="../stylesheets/pure-min.css">
+        <link rel="stylesheet" href="../stylesheets/grids-responsive-min.css">
+        <link rel="stylesheet" href="../stylesheets/extra.min.css">
+        <script>
         (function(i, s, o, g, r, a, m) {
-            i['GoogleAnalyticsObject'] = r;
-            i[r] = i[r] || function() {
-                (i[r].q = i[r].q || []).push(arguments)
-            }, i[r].l = 1 * new Date();
-            a = s.createElement(o),
-                m = s.getElementsByTagName(o)[0];
-            a.async = 1;
-            a.src = g;
-            m.parentNode.insertBefore(a, m)
+        i['GoogleAnalyticsObject'] = r;
+        i[r] = i[r] || function() {
+        (i[r].q = i[r].q || []).push(arguments)
+        }, i[r].l = 1 * new Date();
+        a = s.createElement(o),
+        m = s.getElementsByTagName(o)[0];
+        a.async = 1;
+        a.src = g;
+        m.parentNode.insertBefore(a, m)
         })(window, document, 'script', '//www.google-analytics.com/analytics.js', 'ga');
         ga('create', 'UA-52672478-1', 'auto');
         ga('require', 'displayfeatures');
         ga('send', 'pageview');
-    </script>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
-    <script type="text/javascript">
+        </script>
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+        <script type="text/javascript">
         var switchTo5x = true;
-    </script>
-    <script type="text/javascript" src="http://w.sharethis.com/button/buttons.js"></script>
-    <script type="text/javascript">
+        </script>
+        <script type="text/javascript" src="http://w.sharethis.com/button/buttons.js"></script>
+        <script type="text/javascript">
         stLight.options({
-            publisher: "886d9383-ef5a-4a1b-a102-6798725fe0c0",
-            doNotHash: false,
-            doNotCopy: false,
-            hashAddressBar: false
+        publisher: "886d9383-ef5a-4a1b-a102-6798725fe0c0",
+        doNotHash: false,
+        doNotCopy: false,
+        hashAddressBar: false
         });
-    </script>
-</head>
-
-<body>
-    UA-52672478-1
-    <div class="header">
-        <div class="home-menu pure-menu pure-menu-open pure-menu-horizontal pure-menu-fixed">
-            <a class="pure-menu-heading" href="../index.html">Remarkable</a>
-            <ul>
-                <li><a href="../linux.html">Linux</a></li>
-                <li><a href="./screenshots.html">Screenshots</a></li>
-                <li class="pure-menu-selected"><a href="./download.html">Download</a></li>
-                <li><a href="../windows.html">Windows</a></li>
-            </ul>
+        </script>
+    </head>
+    <body>
+        UA-52672478-1
+        <div class="header">
+            <div class="home-menu pure-menu pure-menu-open pure-menu-horizontal pure-menu-fixed">
+                <a class="pure-menu-heading" href="../index.html">Remarkable</a>
+                <ul>
+                    <li><a href="../linux.html">Linux</a></li>
+                    <li><a href="./screenshots.html">Screenshots</a></li>
+                    <li class="pure-menu-selected"><a href="./download.html">Download</a></li>
+                    <li><a href="../windows.html">Windows</a></li>
+                </ul>
+            </div>
         </div>
-    </div>
-
-
-    <div class="content">
-        <h2 class="content-head is-center">Download Remarkable (v1.62)</h2>
-        <div class="is-center">
-            <span class='st_facebook_large' displayText='Facebook'></span>
-            <span class='st_twitter_large' displayText='Tweet'></span>
-            <span class='st_googleplus_large' displayText='Google +'></span>
-            <span class='st_sharethis_large' displayText='ShareThis'></span>
-            <span class='st_linkedin_large' displayText='LinkedIn'></span>
-            <span class='st_blogger_large' displayText='Blogger'></span>
-            <span class='st_pinterest_large' displayText='Pinterest'></span>
-            <span class='st_wordpress_large' displayText='WordPress'></span>
-            <span class='st_email_large' displayText='Email'></span>
-        </div>
-        <div class="is-center">
-            <a href="https://twitter.com/_jamiemcgowan" class="twitter-follow-button" data-show-count="false" data-size="large">Follow @_jamiemcgowan</a>
-            <script>
-                ! function(d, s, id) {
-                    var js, fjs = d.getElementsByTagName(s)[0],
-                        p = /^http:/.test(d.location) ? 'http' : 'https';
-                    if (!d.getElementById(id)) {
-                        js = d.createElement(s);
-                        js.id = id;
-                        js.src = p + '://platform.twitter.com/widgets.js';
-                        fjs.parentNode.insertBefore(js, fjs);
-                    }
-                }(document, 'script', 'twitter-wjs');
-            </script>
-        </div>
-
-        <div class="pure-u-1">
-            <div class="pure-img is-center">
-                <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-                <ins class="adsbygoogle" style="display:inline-block;width:728px;height:90px" data-ad-client="ca-pub-1941197189172711" data-ad-slot="5720952980"></ins>
+        <div class="content">
+            <h2 class="content-head is-center">Download Remarkable (v1.62)</h2>
+            <div class="is-center">
+                <span class='st_facebook_large' displayText='Facebook'></span>
+                <span class='st_twitter_large' displayText='Tweet'></span>
+                <span class='st_googleplus_large' displayText='Google +'></span>
+                <span class='st_sharethis_large' displayText='ShareThis'></span>
+                <span class='st_linkedin_large' displayText='LinkedIn'></span>
+                <span class='st_blogger_large' displayText='Blogger'></span>
+                <span class='st_pinterest_large' displayText='Pinterest'></span>
+                <span class='st_wordpress_large' displayText='WordPress'></span>
+                <span class='st_email_large' displayText='Email'></span>
+            </div>
+            <div class="is-center">
+                <a href="https://twitter.com/_jamiemcgowan" class="twitter-follow-button" data-show-count="false" data-size="large">Follow @_jamiemcgowan</a>
                 <script>
-                    (adsbygoogle = window.adsbygoogle || []).push({});
+                ! function(d, s, id) {
+                var js, fjs = d.getElementsByTagName(s)[0],
+                p = /^http:/.test(d.location) ? 'http' : 'https';
+                if (!d.getElementById(id)) {
+                js = d.createElement(s);
+                js.id = id;
+                js.src = p + '://platform.twitter.com/widgets.js';
+                fjs.parentNode.insertBefore(js, fjs);
+                }
+                }(document, 'script', 'twitter-wjs');
                 </script>
             </div>
-        </div>
-        <div class="pure-g">
-            <div class="l-box pure-u-1 pure-u-md-1-2 pure-u-lg-1-2">
-                <h3 class="content-subhead is-center">
-                    <i class="fa fa-smile-o fa-2x"></i>
-                    Support Future Development
-                </h3>
-                <p>By donating you are supporting the continued development of Remarkable. This will help future features and fixes to be added. Donations are used to help me to pay hosting fees.
-                </p>
-
-                <div class="is-center">
-                    <a href="donate.html" class="button-success pure-button" onclick="ga('send', 'event', 'donate', 'click', 'linux_download_donate', 1);">Support &amp; Donate</a>
-                </div>
-            </div>
-            <div class="l-box pure-u-1 pure-u-md-1-2 pure-u-lg-1-2">
-
-                <h3 class="content-subhead is-center">
-                    <i class="fa fa-download fa-2x"></i>
-                    Download For Free
-                </h3>
-                <p>
-                    You can download the Remarkable app for free. The free version is exactly the same as the donation version, there are no limitations and you get all of the features.
-                </p>
-                <div class="is-center">
-                    <a href="../files/remarkable_1.62_all.deb" target="_blank" class="button-success pure-button" onclick="ga('send', 'event', 'download', 'click', 'deb', 1);">Download .deb for free</a>
-                    <a href="../files/remarkable-1.62.rpm" target="_blank" class="button-success pure-button" onclick="ga('send', 'event', 'download', 'click', 'rpm', 1);">Download .rpm for free</a>
-                    <a href="https://aur.archlinux.org/packages/remarkable/" target="_blank" class="button-success pure-button" onclick="ga('send', 'event', 'download', 'click', 'aur', 1);">Download from AUR</a>
-                </div>
-                <div class="is-center">
-                    <a class="my_link_ribbon" href="../change_log.md" target="_blank">Read Changelog</a>
-                </div>
-                <div class="is-center">
+            <div class="pure-u-1">
+                <div class="pure-img is-center">
                     <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-                    <ins class="adsbygoogle" style="display:inline-block;width:336px;height:280px" data-ad-client="ca-pub-1941197189172711" data-ad-slot="5197745787"></ins>
+                    <ins class="adsbygoogle" style="display:inline-block;width:728px;height:90px" data-ad-client="ca-pub-1941197189172711" data-ad-slot="5720952980"></ins>
                     <script>
-                        (adsbygoogle = window.adsbygoogle || []).push({});
+                    (adsbygoogle = window.adsbygoogle || []).push({});
                     </script>
                 </div>
-
+            </div>
+            <div class="pure-g">
+                <div class="l-box pure-u-1 pure-u-md-1-2 pure-u-lg-1-2">
+                    <h3 class="content-subhead is-center">
+                    <i class="fa fa-smile-o fa-2x"></i>
+                    Support Future Development
+                    </h3>
+                    <p>By donating you are supporting the continued development of Remarkable. This will help future features and fixes to be added. Donations are used to help me to pay hosting fees.
+                    </p>
+                    <div class="is-center">
+                        <a href="donate.html" class="button-success pure-button" onclick="ga('send', 'event', 'donate', 'click', 'linux_download_donate', 1);">Support &amp; Donate</a>
+                    </div>
+                </div>
+                <div class="l-box pure-u-1 pure-u-md-1-2 pure-u-lg-1-2">
+                    <h3 class="content-subhead is-center">
+                    <i class="fa fa-download fa-2x"></i>
+                    Download For Free
+                    </h3>
+                    <p>
+                    You can download the Remarkable app for free. The free version is exactly the same as the donation version, there are no limitations and you get all of the features.
+                    </p>
+                    <div class="is-center">
+                        <a href="../files/remarkable_1.62_all.deb" target="_blank" class="button-success pure-button" onclick="ga('send', 'event', 'download', 'click', 'deb', 1);">Download .deb for free</a>
+                        <a href="../files/remarkable-1.62.rpm" target="_blank" class="button-success pure-button" onclick="ga('send', 'event', 'download', 'click', 'rpm', 1);">Download .rpm for free</a>
+                        <a href="https://aur.archlinux.org/packages/remarkable/" target="_blank" class="button-success pure-button" onclick="ga('send', 'event', 'download', 'click', 'aur', 1);">Download from AUR</a>
+                    </div>
+                    <div class="is-center">
+                        <a class="my_link_ribbon" href="../change_log.md" target="_blank">Read Changelog</a>
+                    </div>
+                    <div class="is-center">
+                        <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+                        <ins class="adsbygoogle" style="display:inline-block;width:336px;height:280px" data-ad-client="ca-pub-1941197189172711" data-ad-slot="5197745787"></ins>
+                        <script>
+                        (adsbygoogle = window.adsbygoogle || []).push({});
+                        </script>
+                    </div>
+                </div>
             </div>
         </div>
-
-    </div>
-    <div class="footer l-box is-center">
-        <a class="my_link_ribbon" href="mailto:remarkableapp@outlook.com">Jamie McGowan</a> 2015 | <a class="my_link_ribbon" href="../license.txt" target="_blank">License</a>
-    </div>
-
-
-</body>
-
+        <div class="footer l-box is-center">
+            <a class="my_link_ribbon" href="mailto:remarkableapp@outlook.com">Jamie McGowan</a> 2015 | <a class="my_link_ribbon" href="../license.txt" target="_blank">License</a>
+        </div>
+    </body>
 </html>
