--- a/windows.html
+++ b/windows.html
@@ -8,9 +8,9 @@
         <meta name="keywords" content="Markdown, Editor, Linux, Windows, Live Preview, PDF, Free, Export, Scrolling, MathJax, Syntax, Highlighting">
         <link rel="author" href="<link rel=”author” href=”https://plus.google.com/+JamieMcGowan-dev/" />
         <link rel="icon" type="image/png" href="images/remarkable.png">
-        <link rel="stylesheet" href="http://yui.yahooapis.com/pure/0.5.0/pure-min.css">
+        <link rel="stylesheet" href="./stylesheets/pure-min.css">
         <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet">
-        <link rel="stylesheet" href="http://yui.yahooapis.com/pure/0.5.0/grids-responsive-min.css">
+        <link rel="stylesheet" href="./stylesheets/grids-responsive-min.css">
         <link rel="stylesheet" href="./stylesheets/extra.min.css">
         <script>m
         (function(i, s, o, g, r, a, m) {
