--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
             <div class="home-menu pure-menu pure-menu-open pure-menu-horizontal pure-menu-fixed">
                 <a class="pure-menu-heading" href="#">Remarkable</a>
                 <ul>
-                    <li><a href="linux.html" onclick="ga('send', 'event', 'link', 'click', 'head_linux', 1);">Linux</a></li>
-                    <li><a href="windows.html" onclick="ga('send', 'event', 'link', 'click', 'head_windows', 1);">Windows</a></li>
+                    <li><a href="linux.html">Linux</a></li>
+                    <li><a href="windows.html">Windows</a></li>
                 </ul>
             </div>
         </div>
@@ -46,10 +46,10 @@
                 <h1 class="splash-head">Remarkable</h1>
                 <p class="splash-subhead">The best markdown editor for Linux and Windows</p>
                 <p>
-                <a href="linux.html" class="pure-button pure-button-primary" onclick="ga('send', 'event', 'link', 'click', 'landing_linux', 1);">
+                <a href="linux.html" class="pure-button pure-button-primary">
                     <i class="fa fa-linux"></i> Linux
                 </a>
-                <a href="windows.html" class="pure-button pure-button-primary" onclick="ga('send', 'event', 'link', 'click', 'landing_windows', 1);">
+                <a href="windows.html" class="pure-button pure-button-primary">
                     <i class="fa fa-windows"></i> Windows
                 </a>
                 </p>
