--- a/linux/download.html
+++ b/linux/download.html
@@ -98,7 +98,7 @@
                     <i class="fa fa-smile-o fa-2x"></i>
                     Support Future Development
                     </h3>
-                    <p>By donating you are supporting the continued development of Remarkable. This will help future features and fixes to be added. Donations are used to help me to pay hosting fees.
+                    <p>By donating you are supporting the continued development of Remarkable. This will help future features and fixes to be added. Donations are used to support further development time.
                     </p>
                     <div class="is-center">
                         <a href="donate.html" class="button-success pure-button" onclick="ga('send', 'event', 'donate', 'click', 'linux_download_donate', 1);">Support &amp; Donate</a>
