--- a/linux/donate.html
+++ b/linux/donate.html
@@ -87,7 +87,7 @@
             <div class="is-center">
                 <h2>Why Donate?</h2>
                 <p><strong>Donations allow me to make Remarkable even more remarkable!</strong></p>
-                <p>By donating you are helping me to continue development. This means new features and improved exisiting features, bug fixes, better compatibility, better packaging. It also means I can bring Remarkable to more platforms: Windows, Mac and Android. Donations are used to pay for development time.</p>
+                <p>By donating you are helping me to continue development. This means new features and improved exisiting features, bug fixes, better compatibility, better packaging. It also means I can bring Remarkable to more platforms: Windows, Mac and Android. Donations are used to support further development time.</p>
                 <p>Donations are currently accepted via <strong>Bitcoin</strong>, <strong>PayPal</strong> and <strong>Flattr</strong>.</p>
             </div>
             <div class="pure-g">
