--- a/linux.html
+++ b/linux.html
@@ -29,6 +29,13 @@
         ga('send', 'pageview');
         </script>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+        <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+        <script>
+          (adsbygoogle = window.adsbygoogle || []).push({
+            google_ad_client: "ca-pub-1941197189172711",
+            enable_page_level_ads: true
+          });
+        </script>
     </head>
     <body>
         <div class="header">
