--- a/linux/download.html
+++ b/linux/download.html
@@ -56,7 +56,7 @@
             </div>
         </div>
         <div class="content">
-            <h2 class="content-head is-center">Download Remarkable (v1.62)</h2>
+            <h2 class="content-head is-center">Download Remarkable (v1.75)</h2>
             <div class="is-center">
                 <span class='st_facebook_large' displayText='Facebook'></span>
                 <span class='st_twitter_large' displayText='Tweet'></span>
@@ -67,21 +67,6 @@
                 <span class='st_pinterest_large' displayText='Pinterest'></span>
                 <span class='st_wordpress_large' displayText='WordPress'></span>
                 <span class='st_email_large' displayText='Email'></span>
-            </div>
-            <div class="is-center">
-                <a href="https://twitter.com/_jamiemcgowan" class="twitter-follow-button" data-show-count="false" data-size="large">Follow @_jamiemcgowan</a>
-                <script>
-                ! function(d, s, id) {
-                var js, fjs = d.getElementsByTagName(s)[0],
-                p = /^http:/.test(d.location) ? 'http' : 'https';
-                if (!d.getElementById(id)) {
-                js = d.createElement(s);
-                js.id = id;
-                js.src = p + '://platform.twitter.com/widgets.js';
-                fjs.parentNode.insertBefore(js, fjs);
-                }
-                }(document, 'script', 'twitter-wjs');
-                </script>
             </div>
             <div class="pure-u-1">
                 <div class="pure-img is-center">
@@ -112,11 +97,26 @@
                     <p>
                     You can download the Remarkable app for free. The free version is exactly the same as the donation version, there are no limitations and you get all of the features.
                     </p>
-                    <div class="is-center">
-                        <a href="../files/remarkable_1.62_all.deb" target="_blank" class="button-success pure-button" onclick="ga('send', 'event', 'download', 'click', 'deb', 1);">Download .deb for free</a>
-                        <a href="../files/remarkable-1.62.rpm" target="_blank" class="button-success pure-button" onclick="ga('send', 'event', 'download', 'click', 'rpm', 1);">Download .rpm for free</a>
-                        <a href="https://aur.archlinux.org/packages/remarkable/" target="_blank" class="button-success pure-button" onclick="ga('send', 'event', 'download', 'click', 'aur', 1);">Download from AUR</a>
+
+
+                    <div class="pure-g">
+                        <div class="pure-u-1 pure-u-md-1-2 is-center">
+                            <a href="../files/remarkable_1.75_all.deb" target="_blank" class="button-success pure-button" onclick="ga('send', 'event', 'download', 'click', 'deb', 1);">Download .deb</a>
+                        </div>
+                        <div class="pure-u-1 pure-u-md-1-2 is-center">
+                            <a href="../files/remarkable-1.75.rpm" target="_blank" class="button-success pure-button" onclick="ga('send', 'event', 'download', 'click', 'rpm', 1);">Download .rpm</a>
+                        </div>
                     </div>
+                    <div class="pure-g">
+                        <div class="pure-u-1 pure-u-md-1-2 is-center">
+                            <a href="https://aur.archlinux.org/packages/remarkable/" target="_blank" class="button-success pure-button" onclick="ga('send', 'event', 'download', 'click', 'aur', 1);">Download from AUR</a>
+                        </div>
+                        <div class="pure-u-1 pure-u-md-1-2 is-center">
+                            <a href="https://github.com/jamiemcg/remarkable" target="_blank" class="button-success pure-button" onclick="ga('send', 'event', 'download', 'click', 'github', 1);">GitHub Repository</a>
+                        </div>
+                    </div>
+
+
                     <div class="is-center">
                         <a class="my_link_ribbon" href="../change_log.md" target="_blank">Read Changelog</a>
                     </div>
@@ -131,7 +131,7 @@
             </div>
         </div>
         <div class="footer l-box is-center">
-            <a class="my_link_ribbon" href="mailto:remarkableapp@outlook.com">Jamie McGowan</a> 2015 | <a class="my_link_ribbon" href="../license.txt" target="_blank">License</a>
+            <a class="my_link_ribbon" href="mailto:remarkableapp@outlook.com">Jamie McGowan</a> 2016 | <a class="my_link_ribbon" href="../license.txt" target="_blank">License</a> | <a class="my_link_ribbon" href="https://github.com/jamiemcg/remarkable" target="_blank">GitHub</a>
         </div>
     </body>
 </html>
