--- a/windows.html
+++ b/windows.html
@@ -52,7 +52,7 @@
             </div>
             <h2 class="content-head is-center">Remarkable</h2>
             <h3 class="is-center">Remarkable for Windows</h3>
-            <p class="is-center"><strong>The Windows version is currently under development and will be ready soon!</strong></p>
+            <p class="is-center"><strong>The Windows version is under development!</strong></p>
             <p class="is-center">Why not check out the <a class="my_link_ribbon" href="linux.html">Linux version</a> so you can know what to expect?</p>
             <div class="pure-u-1">
                 <img class="pure-img" src="images/remarkable_windows.png">
@@ -106,7 +106,7 @@
             </div>
         </div>
         <div class="footer l-box is-center">
-            <a class="my_link_ribbon" href="mailto:remarkableapp@outlook.com" target="_blank">Jamie McGowan</a> 2015
+            <a class="my_link_ribbon" href="mailto:remarkableapp@outlook.com" target="_blank">Jamie McGowan</a> 2016
         </div>
     </body>
 </html>
