--- a/linux.html
+++ b/linux.html
@@ -1,96 +1,99 @@
 <!doctype html>
 <html>
-    <head>
-        <meta charset="utf-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Remarkable - Linux</title>
-        <meta name="description" content='Remarkable is the best fully featured markdown editor for Linux and Windows'>
-        <meta name="keywords" content="Markdown, Editor, Linux, Windows, Live Preview, PDF, Free, Export, Scrolling, MathJax, Syntax, Highlighting">
-        <link rel="author" href="<link rel=”author” href=”https://plus.google.com/+JamieMcGowan-dev/" />
-        <link rel="icon" type="image/png" href="images/remarkable.png">
-        <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet">
-        <link rel="stylesheet" href="./stylesheets/pure-min.css">
-        <link rel="stylesheet" href="./stylesheets/grids-responsive-min.css">
-        <link rel="stylesheet" href="./stylesheets/extra.min.css">
-        <script>
-        (function(i, s, o, g, r, a, m) {
+
+<head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Remarkable - Linux</title>
+    <meta name="description" content='Remarkable is the best fully featured markdown editor for Linux and Windows'>
+    <meta name="keywords" content="Markdown, Editor, Linux, Windows, Live Preview, PDF, Free, Export, Scrolling, MathJax, Syntax, Highlighting">
+    <link rel="author" href="<link rel=”author” href=”https://plus.google.com/+JamieMcGowan-dev/" />
+    <link rel="icon" type="image/png" href="images/remarkable.png">
+    <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="./stylesheets/pure-min.css">
+    <link rel="stylesheet" href="./stylesheets/grids-responsive-min.css">
+    <link rel="stylesheet" href="./stylesheets/extra.min.css">
+    <script>
+    (function(i, s, o, g, r, a, m) {
         i['GoogleAnalyticsObject'] = r;
         i[r] = i[r] || function() {
-        (i[r].q = i[r].q || []).push(arguments)
+            (i[r].q = i[r].q || []).push(arguments)
         }, i[r].l = 1 * new Date();
         a = s.createElement(o),
-        m = s.getElementsByTagName(o)[0];
+            m = s.getElementsByTagName(o)[0];
         a.async = 1;
         a.src = g;
         m.parentNode.insertBefore(a, m)
-        })(window, document, 'script', '//www.google-analytics.com/analytics.js', 'ga');
-        ga('create', 'UA-52672478-1', 'auto');
-        ga('require', 'displayfeatures');
-        ga('send', 'pageview');
-        </script>
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
-        <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-        <script>
-          (adsbygoogle = window.adsbygoogle || []).push({
-            google_ad_client: "ca-pub-1941197189172711",
-            enable_page_level_ads: true
-          });
-        </script>
-    </head>
-    <body>
-        <div class="header">
-            <div class="home-menu pure-menu pure-menu-open pure-menu-horizontal pure-menu-fixed">
-                <a class="pure-menu-heading" href="index.html">Remarkable</a>
-                <ul>
-                    <li class="pure-menu-selected"><a href="#">Linux</a></li>
-                    <li><a href="./linux/screenshots.html">Screenshots</a></li>
-                    <li><a href="./linux/download.html">Download</a></li>
-                    <li><a href="./windows.html">Windows</a></li>
-                </ul>
+    })(window, document, 'script', '//www.google-analytics.com/analytics.js', 'ga');
+    ga('create', 'UA-52672478-1', 'auto');
+    ga('require', 'displayfeatures');
+    ga('send', 'pageview');
+    </script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+    <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+    <script>
+    (adsbygoogle = window.adsbygoogle || []).push({
+        google_ad_client: "ca-pub-1941197189172711",
+        enable_page_level_ads: true
+    });
+    </script>
+</head>
+
+<body>
+    <div class="header">
+        <div class="home-menu pure-menu pure-menu-open pure-menu-horizontal pure-menu-fixed">
+            <a class="pure-menu-heading" href="index.html">Remarkable</a>
+            <ul>
+                <li class="pure-menu-selected"><a href="#">Linux</a></li>
+                <li><a href="./linux/screenshots.html">Screenshots</a></li>
+                <li><a href="./linux/download.html">Download</a></li>
+                <li><a href="./windows.html">Windows</a></li>
+            </ul>
+        </div>
+    </div>
+    <div class="content">
+        <div class="pure-u-1">
+            <div class="pure-img is-center">
+                <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+                <ins class="adsbygoogle" style="display:inline-block;width:728px;height:90px" data-ad-client="ca-pub-1941197189172711" data-ad-slot="5720952980"></ins>
+                <script>
+                (adsbygoogle = window.adsbygoogle || []).push({});
+                </script>
             </div>
         </div>
-        <div class="content">
-            <div class="pure-u-1">
-                <div class="pure-img is-center">
-                    <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-                    <ins class="adsbygoogle" style="display:inline-block;width:728px;height:90px" data-ad-client="ca-pub-1941197189172711" data-ad-slot="5720952980"></ins>
-                    <script>
-                    (adsbygoogle = window.adsbygoogle || []).push({});
-                    </script>
-                </div>
-            </div>
-            <h2 class="content-head is-center">Remarkable</h2>
-            <h3 class="content-head is-center">A fully featured markdown editor</h3>
-            <div class="is-center">
-                <iframe width="560" height="315" src="//www.youtube.com/embed/UpjAIcXti9s" frameborder="0" allowfullscreen></iframe>
-            </div>
-            <h3 class="content-head is-center">Features:</h3>
-            <div class="pure-g">
-                <div class="l-box pure-u-1 pure-u-md-1-2 pure-u-lg-1-4">
-                    <h3 class="content-subhead">
+        <h2 class="content-head is-center">Remarkable</h2>
+        <h3 class="content-head is-center">A fully featured markdown editor</h3>
+        <div class="is-center">
+            <iframe width="560" height="315" src="//www.youtube.com/embed/UpjAIcXti9s" frameborder="0" allowfullscreen></iframe>
+        </div>
+        <h3 class="content-head is-center">Features:</h3>
+        <div class="pure-g">
+            <div class="l-box pure-u-1 pure-u-md-1-2 pure-u-lg-1-4">
+                <h3 class="content-subhead">
                     <i class="fa fa-bolt fa-2x"></i>
                     Live Preview
                     </h3>
-                    <p>
+                <p>
                     With Live Preview you can see your changes as you make them! There is no need to export first to check your syntax. This is accompanied with <b>synchronized scrolling</b>.
-                    </p>
-                </div>
-                <div class="l-box pure-u-1 pure-u-md-1-2 pure-u-lg-1-4">
-                    <h3 class="content-subhead">
+                </p>
+            </div>
+            <div class="l-box pure-u-1 pure-u-md-1-2 pure-u-lg-1-4">
+                <h3 class="content-subhead">
                     <i class="fa fa-github-alt fa-2x"></i>
                     Github Markdown
                     </h3>
-                    <p>
+                <p>
                     Remarkable has Github Flavoured Markdown. This has a simple, easy to learn syntax with features like checklists, highlighting, links, images and more!.
-                    </p>
-                </div>
-                <div class="l-box pure-u-1 pure-u-md-1-2 pure-u-lg-1-4">
-                    <h3 class="content-subhead">
+                </p>
+            </div>
+            <div class="l-box pure-u-1 pure-u-md-1-2 pure-u-lg-1-4">
+                <h3 class="content-subhead">
                     <i class="fa fa-file-pdf-o fa-2x"></i>
                     Export to PDF and HTML
                     </h3>
-                    <p>
-                Remarkable allows you to export your files to PDF and HTML from within the app! The HTML code is even prettified and PDF's have a <abbr title="Table of Contents">TOC</abbr>.
+                <p>
+                    Remarkable allows you to export your files to PDF and HTML from within the app! The HTML code is even prettified and PDF's have a
+                    <abbr title="Table of Contents">TOC</abbr>.
                 </p>
             </div>
             <div class="l-box pure-u-1 pure-u-md-1-2 pure-u-lg-1-4">
@@ -99,7 +102,7 @@
                 Custom CSS
                 </h3>
                 <p>
-                You can style your markdown documents however you like! If you dont like the default styles you can use your own!
+                    You can style your markdown documents however you like! If you dont like the default styles you can use your own!
                 </p>
             </div>
         </div>
@@ -123,7 +126,7 @@
             Syntax Highlighting
             </h3>
             <p>
-            The code you write is highlighted in the Live Preview. This makes Remarkable great for writing software documentation or even taking lecture notes!
+                The code you write is highlighted in the Live Preview. This makes Remarkable great for writing software documentation or even taking lecture notes!
             </p>
         </div>
         <div class="l-box pure-u-1 pure-u-md-1-2 pure-u-lg-1-4">
@@ -132,7 +135,7 @@
             Completely Customizable
             </h3>
             <p>
-            You can set up Remarkable whatever way you like! You can swap views, hide views and more. There is even a night mode.
+                You can set up Remarkable whatever way you like! You can swap views, hide views and more. There is even a night mode.
             </p>
         </div>
         <div class="l-box pure-u-1 pure-u-md-1-2 pure-u-lg-1-4">
@@ -141,7 +144,7 @@
             MathJax Support
             </h3>
             <p>
-            With MathJax support you can render beautiful, rich documents with advanced formatting.
+                With MathJax support you can render beautiful, rich documents with advanced formatting.
             </p>
         </div>
         <div class="l-box pure-u-1 pure-u-md-1-2 pure-u-lg-1-4">
@@ -150,7 +153,7 @@
             Keyboard Shortcuts
             </h3>
             <p>
-            Keyboard shortcuts enable maximum productivity! They offer a great way to speed up markdown formatting.
+                Keyboard shortcuts enable maximum productivity! They offer a great way to speed up markdown formatting.
             </p>
         </div>
     </div>
@@ -173,16 +176,20 @@
         <div class="pure-u-1 pure-u-md-1-2 pure-u-lg-3-5">
             <h2 class="content-head content-head-ribbon">Remarkable App For Linux.</h2>
             <p>
-            Remarkable is a powerful markdown editor available for Linux. It is fully featured and customizable. You can download the Linux version for free (or donate if you wish). Easy installers are available for Debian, Ubuntu, Fedora, SUSE and Arch systems. <a href="windows.html" class="my_link_ribbon">Looking for the Windows version?</a>
+                Remarkable is a powerful markdown editor available for Linux. It is fully featured and customizable. You can download the Linux version for free (or donate if you wish). Easy installers are available for Debian, Ubuntu, Fedora, SUSE and Arch systems.
             </p>
             <div class="is-center">
                 <a href="./linux/download.html" class="pure-button pure-button-primary" onclick="ga('send', 'event', 'download_link', 'click', 'linux_bottom_download', 1);"><i class="fa fa-download"> Download</i></a>
                 <a href="./linux/donate.html" class="pure-button pure-button-primary" onclick="ga('send', 'event', 'donate', 'click', 'linux_bottom_dontate', 1);"><i class="fa fa-smile-o"> Donate</i></a>
+                <a href="https://github.com/jamiemcg/remarkable" target="_blank" class="pure-button pure-button-primary" onclick="ga('send', 'event', 'download', 'click', 'linux_bottom_github', 1);">
+                    <i class="fa fa-github" aria-hidden="true"> GitHub</i></a>
             </div>
         </div>
     </div>
     <div class="footer l-box is-center">
-        <a class="my_link_ribbon" href="mailto:remarkableapp@outlook.com" target="_blank">Jamie McGowan</a> 2015 | <a class="my_link_ribbon" href="license.txt" target="_blank">License</a>
+        <a class="my_link_ribbon" href="mailto:remarkableapp@outlook.com" target="_blank">Jamie McGowan</a> 2016 | <a class="my_link_ribbon" href="license.txt" target="_blank">License</a> | 
+        <a class="my_link_ribbon" href="https://github.com/jamiemcg/remarkable" target="_blank">GitHub</a>
     </div>
 </body>
+
 </html>
