--- a/linux/donate.html
+++ b/linux/donate.html
@@ -70,25 +70,10 @@
                 <span class='st_email_large' displayText='Email'></span>
             </div>
             <div class="is-center">
-                <a href="https://twitter.com/_jamiemcgowan" class="twitter-follow-button" data-show-count="false" data-size="large">Follow @_jamiemcgowan</a>
-                <script>
-                ! function(d, s, id) {
-                var js, fjs = d.getElementsByTagName(s)[0],
-                p = /^http:/.test(d.location) ? 'http' : 'https';
-                if (!d.getElementById(id)) {
-                js = d.createElement(s);
-                js.id = id;
-                js.src = p + '://platform.twitter.com/widgets.js';
-                fjs.parentNode.insertBefore(js, fjs);
-                }
-                }(document, 'script', 'twitter-wjs');
-                </script>
-            </div>
-            <div class="is-center">
                 <h2>Why Donate?</h2>
                 <p><strong>Donations allow me to make Remarkable even more remarkable!</strong></p>
                 <p>By donating you are helping me to continue development. This means new features and improved exisiting features, bug fixes, better compatibility, better packaging. It also means I can bring Remarkable to more platforms: Windows, Mac and Android. Donations are used to support further development time.</p>
-                <p>Donations are currently accepted via <strong>Bitcoin</strong>, <strong>PayPal</strong> and <strong>Flattr</strong>.</p>
+                <p>Donations are currently accepted via <strong>Bitcoin</strong> and <strong>PayPal</strong>.</p>
             </div>
             <div class="pure-g">
                 <div class="l-box pure-u-1 pure-u-md-1-2 pure-u-lg-1-2 is-center">
@@ -103,27 +88,7 @@
                             <input type="hidden" name="hosted_button_id" value="B5PJTSJNFYGT2">
                             <input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_donate_LG.gif" border="0" name="submit" alt="PayPal - The safer, easier way to pay online!"><img alt="" border="0" src="https://www.paypalobjects.com/en_US/i/scr/pixel.gif" width="1" height="1"></form>
                         </div>
-                        <h3 class="content-subhead is-center">
-                        <i class="fa fa-money fa-2x"></i>
-                        Flattr
-                        </h3>
-                        <p>Click the button bellow to <em>Flattr</em> me</p>
-                        <div class="is-center">
-                            <script id='fb1eqcy'>
-                            (function(i) {
-                            var f, s = document.getElementById(i);
-                            f = document.createElement('iframe');
-                            f.src = '//api.flattr.com/button/view/?uid=jamiemcgowan&url=' + encodeURIComponent(document.URL);
-                            f.title = 'Flattr';
-                            f.height = 62;
-                            f.width = 55;
-                            f.style.borderWidth = 0;
-                            s.parentNode.insertBefore(f, s);
-                            })('fb1eqcy');
-                            </script>
-                        </div>
-                        <p>
-                        </p>
+                        <br>
                     </div>
                     <div class="l-box pure-u-1 pure-u-md-1-2 pure-u-lg-1-2 is-center">
                         <h3 class="content-subhead is-center">
@@ -138,7 +103,9 @@
                 </div>
             </div>
             <div class="footer l-box is-center">
-                <a class="my_link_ribbon" href="mailto:remarkableapp@outlook.com">Jamie McGowan</a> 2015 | <a class="my_link_ribbon" href="../license.txt" target="_blank">License</a>
+                <a class="my_link_ribbon" href="mailto:remarkableapp@outlook.com">Jamie McGowan</a> 2016 | 
+                <a class="my_link_ribbon" href="../license.txt" target="_blank">License</a> | 
+                <a class="my_link_ribbon" href="https://github.com/jamiemcg/remarkable" target="_blank">GitHub</a>
             </div>
         </body>
     </html>
