--- a/linux/screenshots.html
+++ b/linux/screenshots.html
@@ -76,21 +76,6 @@
                     <span class='st_wordpress_large' displayText='WordPress'></span>
                     <span class='st_email_large' displayText='Email'></span>
                 </div>
-                <div class="is-center">
-                    <a href="https://twitter.com/_jamiemcgowan" class="twitter-follow-button" data-show-count="false" data-size="large">Follow @_jamiemcgowan</a>
-                    <script>
-                    ! function(d, s, id) {
-                    var js, fjs = d.getElementsByTagName(s)[0],
-                    p = /^http:/.test(d.location) ? 'http' : 'https';
-                    if (!d.getElementById(id)) {
-                    js = d.createElement(s);
-                    js.id = id;
-                    js.src = p + '://platform.twitter.com/widgets.js';
-                    fjs.parentNode.insertBefore(js, fjs);
-                    }
-                    }(document, 'script', 'twitter-wjs');
-                    </script>
-                </div>
                 <div class="pure-g">
                     <div class="pure-u-1">
                         <div class="pure-img is-center">
@@ -223,7 +208,8 @@
             </div>
         </div>
         <div class="footer l-box is-center">
-            <a class="my_link_ribbon" href="mailto:remarkableapp@outlook.com">Jamie McGowan</a> 2015 | <a class="my_link_ribbon" href="../license.txt" target="_blank">License</a>
+            <a class="my_link_ribbon" href="mailto:remarkableapp@outlook.com">Jamie McGowan</a> 2016 | <a class="my_link_ribbon" href="../license.txt" target="_blank">License</a> | 
+            <a class="my_link_ribbon" href="https://github.com/jamiemcg/remarkable" target="_blank">GitHub</a>
         </div>
     </body>
 </html>
