--- a/linux.html
+++ b/linux.html
@@ -52,7 +52,7 @@
         </div>
     </div>
     <div class="content">
-        <div class="pure-u-1">
+        <div class="pure-u-1 push-down">
             <div class="pure-img is-center">
                 <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
                 <ins class="adsbygoogle" style="display:inline-block;width:728px;height:90px" data-ad-client="ca-pub-1941197189172711" data-ad-slot="5720952980"></ins>
@@ -184,12 +184,18 @@
                 <a href="https://github.com/jamiemcg/remarkable" target="_blank" class="pure-button pure-button-primary" onclick="ga('send', 'event', 'download', 'click', 'linux_bottom_github', 1);">
                     <i class="fa fa-github" aria-hidden="true"> GitHub</i></a>
             </div>
+            <div class="is-center">
+                <a class="github-button" href="https://github.com/jamiemcg/remarkable" data-icon="octicon-star" data-style="mega" data-count-href="/jamiemcg/remarkable/stargazers" data-count-api="/repos/jamiemcg/remarkable#stargazers_count" data-count-aria-label="# stargazers on GitHub" aria-label="Star jamiemcg/remarkable on GitHub">Star</a>
+                
+                <a class="github-button" href="https://github.com/jamiemcg" data-style="mega" data-count-href="/jamiemcg/followers" data-count-api="/users/jamiemcg#followers" data-count-aria-label="# followers on GitHub" aria-label="Follow @jamiemcg on GitHub">Follow @jamiemcg</a>
+            </div>
         </div>
     </div>
     <div class="footer l-box is-center">
-        <a class="my_link_ribbon" href="mailto:remarkableapp@outlook.com" target="_blank">Jamie McGowan</a> 2016 | <a class="my_link_ribbon" href="license.txt" target="_blank">License</a> | 
+        <a class="my_link_ribbon" href="mailto:remarkableapp@outlook.com" target="_blank">Jamie McGowan</a> 2016 | <a class="my_link_ribbon" href="license.txt" target="_blank">License</a> |2
         <a class="my_link_ribbon" href="https://github.com/jamiemcg/remarkable" target="_blank">GitHub</a>
     </div>
+    <script async defer src="https://buttons.github.io/buttons.js"></script>
 </body>
 
 </html>
