--- a/linux.html
+++ b/linux.html
@@ -52,7 +52,7 @@
         </div>
     </div>
     <div class="content">
-        <div class="pure-u-1 push-down">
+        <div class="pure-u-1">
             <div class="pure-img is-center">
                 <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
                 <ins class="adsbygoogle" style="display:inline-block;width:728px;height:90px" data-ad-client="ca-pub-1941197189172711" data-ad-slot="5720952980"></ins>
