--- a/windows.html
+++ b/windows.html
@@ -106,7 +106,7 @@
             </div>
         </div>
         <div class="footer l-box is-center">
-            <a class="my_link_ribbon" href="mailto:remarkableapp@outlook.com" target="_blank">Jamie McGowan</a> 2016
+            <a class="my_link_ribbon" href="mailto:remarkableapp@outlook.com" target="_blank">Jamie McGowan</a> <script>document.write(new Date().getFullYear())</script>
         </div>
     </body>
 </html>
