--- a/linux.html
+++ b/linux.html
@@ -52,24 +52,17 @@
 		</div>
 	</div>
 	<div class="content">
+		<br>
+		<br>
 		<div class="pure-u-1">
 			<div class="pure-img is-center">
-				<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-				<!-- responsive-default -->
-				<ins class="adsbygoogle"
-					style="display:block"
-					data-ad-client="ca-pub-1941197189172711"
-					data-ad-slot="1996968333"
-					data-ad-format="auto"
-					data-full-width-responsive="true"></ins>
-				<script>
-				(adsbygoogle = window.adsbygoogle || []).push({});
-				</script>
+				<!-- here jamie -->
+				<iframe src="//rcm-na.amazon-adsystem.com/e/cm?o=1&p=48&l=ur1&category=audible&banner=1P30Y4SND0J2WWAXDEG2&f=ifr&linkID=a49869a4c52f0d6b27f2cdd95ab6d8e4&t=remarkable03f-20&tracking_id=remarkable03f-20" width="728" height="90" scrolling="no" border="0" marginwidth="0" style="border:none;" frameborder="0"></iframe>
 			</div>
 		</div>
 		<h2 class="content-head is-center">Remarkable</h2>
 		<h3 class="content-head is-center">A fully featured markdown editor</h3>
-
+		
 		<div class="pure-g">
 			<div class="l-box pure-u-1 pure-u-md-1-2 pure-u-lg-1-4">
 				<h3 class="content-subhead">
@@ -169,17 +162,7 @@
 	</div>
 	<div class="pure-u-1">
 		<div class="pure-img is-center">
-			<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-			<!-- responsive-default -->
-			<ins class="adsbygoogle"
-				style="display:block"
-				data-ad-client="ca-pub-1941197189172711"
-				data-ad-slot="1996968333"
-				data-ad-format="auto"
-				data-full-width-responsive="true"></ins>
-			<script>
-			(adsbygoogle = window.adsbygoogle || []).push({});
-			</script>
+			<iframe src="//rcm-na.amazon-adsystem.com/e/cm?o=1&p=48&l=ur1&category=amzn_music_bounty&banner=1GTA90RTC5R9V7HJA902&f=ifr&linkID=e6e1edc49a773023907cb28f66ec2035&t=remarkable03f-20&tracking_id=remarkable03f-20" width="728" height="90" scrolling="no" border="0" marginwidth="0" style="border:none;" frameborder="0"></iframe>
 		</div>
 	</div>
 	<div class="ribbon l-box-lrg pure-g">
@@ -209,6 +192,7 @@
 		<a class="my_link_ribbon" href="https://github.com/jamiemcg/remarkable" target="_blank">GitHub</a>
 	</div>
 	<script async defer src="https://buttons.github.io/buttons.js"></script>
+	<div id="amzn-assoc-ad-0584d55e-50d4-4a77-a53d-984a1c40b33b"></div><script async src="//z-na.amazon-adsystem.com/widgets/onejs?MarketPlace=US&adInstanceId=0584d55e-50d4-4a77-a53d-984a1c40b33b"></script>
 </body>
 
 </html>
