--- a/linux/screenshots.html
+++ b/linux/screenshots.html
@@ -199,6 +199,7 @@
 		<a class="my_link_ribbon" href="mailto:remarkableapp@outlook.com">Jamie McGowan</a> <script>document.write(new Date().getFullYear())</script> | <a class="my_link_ribbon" href="../license.txt" target="_blank">License</a> |
 		<a class="my_link_ribbon" href="https://github.com/jamiemcg/remarkable" target="_blank">GitHub</a>
 	</div>
+	<div id="amzn-assoc-ad-0584d55e-50d4-4a77-a53d-984a1c40b33b"></div><script async src="//z-na.amazon-adsystem.com/widgets/onejs?MarketPlace=US&adInstanceId=0584d55e-50d4-4a77-a53d-984a1c40b33b"></script>
 	<script async defer src="https://buttons.github.io/buttons.js"></script>
 </body>
 
