--- a/linux.html
+++ b/linux.html
@@ -7,7 +7,6 @@
 	<title>Remarkable - Linux</title>
 	<meta name="description" content='Remarkable is the best fully featured markdown editor for Linux and Windows'>
 	<meta name="keywords" content="Markdown, Editor, Linux, Windows, Live Preview, PDF, Free, Export, Scrolling, MathJax, Syntax, Highlighting">
-	<link rel="author" href="<link rel=”author” href=”https://plus.google.com/+JamieMcGowan-dev/" />
 	<link rel="icon" type="image/png" href="images/remarkable.png">
 	<link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet">
 	<link rel="stylesheet" href="./stylesheets/pure-min.css">
@@ -56,8 +55,17 @@
 		<br>
 		<div class="pure-u-1">
 			<div class="pure-img is-center">
-				<!-- here jamie -->
-				<iframe src="//rcm-na.amazon-adsystem.com/e/cm?o=1&p=48&l=ur1&category=audible&banner=1P30Y4SND0J2WWAXDEG2&f=ifr&linkID=a49869a4c52f0d6b27f2cdd95ab6d8e4&t=remarkable03f-20&tracking_id=remarkable03f-20" width="728" height="90" scrolling="no" border="0" marginwidth="0" style="border:none;" frameborder="0"></iframe>
+				<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+				<!-- responsive-default -->
+				<ins class="adsbygoogle"
+					style="display:block"
+					data-ad-client="ca-pub-1941197189172711"
+					data-ad-slot="1996968333"
+					data-ad-format="auto"
+					data-full-width-responsive="true"></ins>
+				<script>
+				(adsbygoogle = window.adsbygoogle || []).push({});
+				</script>
 			</div>
 		</div>
 		<h2 class="content-head is-center">Remarkable</h2>
@@ -162,7 +170,17 @@
 	</div>
 	<div class="pure-u-1">
 		<div class="pure-img is-center">
-			<iframe src="//rcm-na.amazon-adsystem.com/e/cm?o=1&p=48&l=ur1&category=amzn_music_bounty&banner=1GTA90RTC5R9V7HJA902&f=ifr&linkID=e6e1edc49a773023907cb28f66ec2035&t=remarkable03f-20&tracking_id=remarkable03f-20" width="728" height="90" scrolling="no" border="0" marginwidth="0" style="border:none;" frameborder="0"></iframe>
+			<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+				<!-- responsive-default -->
+				<ins class="adsbygoogle"
+					style="display:block"
+					data-ad-client="ca-pub-1941197189172711"
+					data-ad-slot="1996968333"
+					data-ad-format="auto"
+					data-full-width-responsive="true"></ins>
+				<script>
+				(adsbygoogle = window.adsbygoogle || []).push({});
+			</script>
 		</div>
 	</div>
 	<div class="ribbon l-box-lrg pure-g">
@@ -191,7 +209,6 @@
 		<a class="my_link_ribbon" href="mailto:remarkableapp@outlook.com" target="_blank">Jamie McGowan</a> <script>document.write(new Date().getFullYear())</script> | <a class="my_link_ribbon" href="license.txt" target="_blank">License</a> |
 		<a class="my_link_ribbon" href="https://github.com/jamiemcg/remarkable" target="_blank">GitHub</a>
 	</div>
-	<div id="amzn-assoc-ad-0584d55e-50d4-4a77-a53d-984a1c40b33b"></div><script async src="//z-na.amazon-adsystem.com/widgets/onejs?MarketPlace=US&adInstanceId=0584d55e-50d4-4a77-a53d-984a1c40b33b"></script>
 	<script async defer src="https://buttons.github.io/buttons.js"></script>
 </body>
 
