--- a/linux/screenshots.html
+++ b/linux/screenshots.html
@@ -7,7 +7,7 @@
 	<title>Remarkable - Screenshots (Linux)</title>
 	<meta name="description" content='Remarkable is the best fully featured markdown editor for Linux and Windows'>
 	<meta name="keywords" content="Markdown, Editor, Linux, Windows, Live Preview, PDF, Free, Export, Scrolling, MathJax, Syntax, Highlighting">
-	<link rel="author" href="<link rel=”author” href=”https://plus.google.com/+JamieMcGowan-dev/" />
+
 	<link rel="icon" type="image/png" href="../images/remarkable.png">
 	<link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet">
 	<link rel="stylesheet" href="../stylesheets/pure-min.css">
@@ -63,7 +63,17 @@
 			<div class="pure-g">
 				<div class="pure-u-1">
 					<div class="pure-img is-center">
-							<iframe src="//rcm-na.amazon-adsystem.com/e/cm?o=1&p=48&l=ur1&category=primemain&banner=0ZPFACTPTMFJ1D5D3AG2&f=ifr&linkID=017571495005f7c479e566578931763f&t=remarkable03f-20&tracking_id=remarkable03f-20" width="728" height="90" scrolling="no" border="0" marginwidth="0" style="border:none;" frameborder="0"></iframe>
+						<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+						<!-- responsive-default -->
+						<ins class="adsbygoogle"
+							style="display:block"
+							data-ad-client="ca-pub-1941197189172711"
+							data-ad-slot="1996968333"
+							data-ad-format="auto"
+							data-full-width-responsive="true"></ins>
+						<script>
+							(adsbygoogle = window.adsbygoogle || []).push({});
+						</script>
 					</div>
 				</div>
 			</div>
@@ -199,7 +209,6 @@
 		<a class="my_link_ribbon" href="mailto:remarkableapp@outlook.com">Jamie McGowan</a> <script>document.write(new Date().getFullYear())</script> | <a class="my_link_ribbon" href="../license.txt" target="_blank">License</a> |
 		<a class="my_link_ribbon" href="https://github.com/jamiemcg/remarkable" target="_blank">GitHub</a>
 	</div>
-	<div id="amzn-assoc-ad-0584d55e-50d4-4a77-a53d-984a1c40b33b"></div><script async src="//z-na.amazon-adsystem.com/widgets/onejs?MarketPlace=US&adInstanceId=0584d55e-50d4-4a77-a53d-984a1c40b33b"></script>
 	<script async defer src="https://buttons.github.io/buttons.js"></script>
 </body>
 
