added debian build for version 1.95; no rpm build yet

--- a/linux/donate.html
+++ b/linux/donate.html
@@ -72,9 +72,9 @@
                         Bitcoin
                         </h3>
                 <p>
-                    <Strong>Address:</Strong> 17BTowSjuartEEgeta3RuHYxeJW1aeXxCv
+                    <Strong>Address:</Strong> bc1q973mdrnk3tv7y9nwfdg3xfxkwatnd548ytzkah
                 </p>
-                <img src="../images/QR%20wallet.png">
+                <img src="../images/QR_wallet.png">
             </div>
         </div>
     </div>
